--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
   <head>
-    <!-- Aquí va información importante pero no visible 
-         dentro del navegador -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no"/>
     <title>Matcha</title>
     <link rel="stylesheet" href="style.css" >
   <body>
